Trying to fix horizontal views so they display vertically on mobile devices and horizontally on bigger devices

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -818,7 +818,7 @@ input[type="color"]:focus,
 
 .property-image-list{
 	position: relative;
-	width: 50%;
+	//width: 50%;
 	display: table-cell;
 	vertical-align: top;
 }
@@ -847,7 +847,7 @@ input[type="color"]:focus,
 
 .property-text{
 	position: relative;
-	width: 50%;
+	//width: 50%;
 	display: table-cell;
 	padding: 15px;
 	vertical-align: top;
